feat: IQAir Data 2023-11-21-06

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=apacona
-DB_NAME=apacona
-DB_USER=apacona
-DB_PASSWORD=apacona
+DB_HOST=172.203.200.179
+DB_NAME=Rekdat
+DB_USER=postgres
+DB_PASSWORD=sigma123
