--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=apacona
-DB_NAME=apacona
-DB_USER=apacona
-DB_PASSWORD=apacona
+DB_HOST=172.203.225.15
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=apcbapcb4206969!
